# sparc-template

./: .env.template  .gitignore  Cargo.toml  Readme.md
migrations/: 20240726152017_init.down.sql  20240726152017_init.up.sql
src/: app_state.rs  main.rs  router.rs  setup.rs
src/core/user/: initialize_user.rs  mod.rs  user_extractor.rs
src/routes/: authed.rs  index.rs  mod.rs  router.rs
