[package]
name = "sparc-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
clerk-rs = { version = "0.3.1", features = ["axum"] }
dotenv = "0.15.0"
fern = "0.6.2"
humantime = "2.1.0"
hyper = "1.4.1"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.39.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "tracing"] }
tower-layer = "0.3.2"
tower-request-id = "0.3.0"
tracing = { version = "0.1.40", features = ["log", "log-always"] }
uuid = { version = "1.10.0", features = ["v4", "v6"] }
